--- a/projects/ngx-sweetalert2/package.json
+++ b/projects/ngx-sweetalert2/package.json
@@ -9,8 +9,8 @@
     "tslib": "^2.0.0"
   },
   "peerDependencies": {
-    "@angular/common": "^14.0.0 || ^15.0.0 || ^16.0.0",
-    "@angular/core": "^14.0.0 || ^15.0.0 || ^16.0.0",
+    "@angular/common": "^14.0.0 || ^15.0.0 || ^16.0.0 || ^17.0.0",
+    "@angular/core": "^14.0.0 || ^15.0.0 || ^16.0.0 || ^17.0.0",
     "sweetalert2": "^11.0.0"
   }
 }
